2026-02-08  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.1.3: Edit.perl_s: mimic perl's "s/regexp/subst/flags"
	commands (without leading 's')

2026-02-07  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.1.2: add --edit_prefix and --edit_title

2026-02-06  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>

	* v0.1.1: push to github

