@@ -1,3 +1,7 @@
+2026-02-09  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>
+
+	* lib/artist_type.ml: rank of persons with more than one role
+
 2026-02-08  Thorsten Ohl  <ohl@physik.uni-wuerzburg.de>
 
 	* v0.1.3: Edit.perl_s: mimic perl's "s/regexp/subst/flags"
